--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-actuator'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'org.springframework.boot:spring-boot-starter-web'
-	compile 'org.springframework.boot:spring-security-jwt'
+	compile 'org.springframework.boot:spring-boot-starter-security'
+
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	compile 'org.springframework.boot:spring-boot-starter-validation'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
