--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-security'
 
+	compile group: 'org.hashids', name: 'hashids', version: '1.0.3'
+	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.3'
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	compile 'org.springframework.boot:spring-boot-starter-validation'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
