--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
 com.pky.smartselling.hashids.salt = test
