--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,11 @@ dependencies {
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
-	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+	testCompile("com.h2database:h2")
+
 
 }
