--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,17 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-security'
+	compile 'org.springframework.boot:spring-boot-starter-validation'
 
 	compile group: 'org.hashids', name: 'hashids', version: '1.0.3'
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.3'
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-	compile 'org.springframework.boot:spring-boot-starter-validation'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.6'
+	implementation 'com.google.firebase:firebase-admin:6.8.0'
+
 	runtimeOnly 'mysql:mysql-connector-java'
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 	testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
